--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   5) En el menú usuario, tanto en "Regístrate" como en "Inicia sesión" hay que implementar modales
     para que quede como en los mockups.
 
-  6) Si los modales de registro e inicio ya están hechos, hay que hacer la conexión con la base de datos.s
+  6) Si los modales de registro e inicio ya están hechos, hay que hacer la conexión con la base de datos.
 -->
 <body>
   <!-- ### INICIO NAVBAR PRINCIPAL ### -->
